--- a/styles/todo.css
+++ b/styles/todo.css
@@ -3,3 +3,13 @@ div {
     border-width: 1px;
     border-color: red;
 }
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button {
+    width: 100px;
+}
